--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <html>
     <head>
         <title> Netflix</title>
+        <link rel="stylesheet"href="index.css">
+        <style>
+            p{
+    color: blue;
+}
+h1{
+    color: red;
+}
+/* by using id we can diffrently identify the same tag and color it*/
+#testing1{
+    color: aqua;
+}
+#testing2{
+    color: green;
+}
+
+.para1{
+    color: black;
+}
+.para2{
+    color:blueviolet;
+}
+        </style>
     </head>
     <body>
-        <h1>Text </h1>
+        <h1 id="testing1">Text1 </h1>
+        <h1 id="testing2">Text2 </h1>
         <h2>Text </h2>
         <h3>Text </h3>
-        <h4>Text </h4>
-        <p>ugugeu huhfuh jhfuekh djheh jhehf edjhehf <br>ejfheihf fejhfh</p>
+        <h4 style="color: brown;">Text </h4>
+        <p class="para1">ugugeu huhfuh jhfuekh djheh jhehf edjhehf <br>ejfheihf fejhfh</p>
+        <p class="para2">ugugeu huhfuh jhfuekh djheh jhehf edjhehf <br>ejfheihf fejhfh</p>
         <a href="https://www.wikipedia.org/"> Wikipedia </a>  
         <img height="400px" width="400 px" src="https://en.wikipedia.org/wiki/Main_Page#/media/File:Mars_helicopter_on_sol_46.png">
         <!--lists-->
@@ -21,7 +46,13 @@
         </ol> 
         <form>
             <input type="text" placeholder="=Enter your name">
+            <input type="text" placeholder="=Enter your name">
+            <input type="text" placeholder="=Enter your name">
+            <input type="text" placeholder="=Enter your name">
             <button type="Submit">Submit</button>
         </form>
+        <div class="devision1">
+            <h1>This is a devision 1</h1>
+        </div>
     </body>
 </html>
